still icon adjusting + flex gap fixed

--- a/src/index.css
+++ b/src/index.css
@@ -167,12 +167,13 @@ a, button, input, select{
 }
 .menu-btn img{
    max-width: 0.5rem;
+   padding: 0.25rem;
 }
 /* .menu-btn img, .phone-btn svg{
    max-width: 1.5rem;
 } */
 .menu-btn:hover,.phone-btn:hover{
-    border: 2px solid var(--primary-yellow);
+    border: 3px solid var(--primary-yellow);
     box-shadow: 0 0 15px rgba(255, 233, 160, 0.5);
     /* color: var(--primary-black); */
 }
@@ -461,7 +462,7 @@ a, button, input, select{
 .home-gallery{
     align-items: flex-start;
     /* gap: 2rem; */
-    padding-top: 3rem;
+    padding: 3rem 0 0;
 }
 .gallery-showroom{
     overflow: hidden;
@@ -573,11 +574,12 @@ a, button, input, select{
 }
 .partner-imgs{
     justify-content: center;
-    gap: 2rem;
+    /* gap: 2rem; */
 }
 .partner-imgs a{
     filter: brightness(0.3);
     transition: all 0.6s ease;
+    margin: 1.5rem;
 }
 .partner-imgs a:hover{
     filter: brightness(1);
@@ -700,8 +702,11 @@ footer ul li a:hover{
 /* counting numbers */
 .big-num-container{
     justify-content: flex-start;
-    gap: 1rem;
+    /* gap: 1rem; */
     font-size: 1.5rem;
+}
+.big-num-container > *:first-child{
+    margin-right: 1rem;
 }
 .big-num{
     display: grid;
@@ -767,7 +772,10 @@ footer ul li a:hover{
     padding: 0.5rem 0;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
+}
+.sales ul li >*:first-child{
+    margin-right: 0.5rem;
 }
 .sales ul li svg{
     font-size: 1.5rem;
@@ -830,7 +838,10 @@ footer ul li a:hover{
     padding: 2rem 0 6rem;
     justify-content: center;
     align-items: flex-start;
-    gap: 2rem 1rem;
+    /* gap: 2rem 1rem; */
+}
+.products-display-ul li{
+    margin: 2rem 1rem;
 }
 .products-display-ul li a{
     position: relative;
@@ -918,8 +929,11 @@ footer ul li a:hover{
 }
 .flower-container .link-btn{
     width: max-content;
-    gap: 1rem;
+    /* gap: 1rem; */
     margin: 2rem auto;
+}
+.flower-container .link-btn > *:first-child{
+    margin-right: 1rem;
 }
 /* TREES PAGE */
 .tree-page-hero{
@@ -1156,15 +1170,21 @@ footer ul li a:hover{
     }
     .our-work ul li{
         justify-content: center;
-        gap: 1rem;
+        /* gap: 1rem; */
     }
     .best-kaliopa, .crown-div{
         display: flex;
         align-items: center;
-        gap: 3rem;
+        /* gap: 3rem; */
+    }
+    .best-kaliopa >*:first-child{
+        padding-right: 3rem;
     }
     .crown-div{
         flex-direction: row-reverse;
+    }
+    .crown-div >*:first-child{
+        padding-left: 3rem;
     }
     .best-kaliopa > *, .crown-div > *{
         flex: 1;
@@ -1209,10 +1229,13 @@ footer ul li a:hover{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 2rem;
+        /* gap: 2rem; */
     }
     .location > *{
         flex: 1;
+    }
+    .location >*:first-child{
+        margin-right: 2rem;
     }
     footer ul, .footer-copy{
         width: 50%;
@@ -1230,7 +1253,10 @@ footer ul li a:hover{
     }
     .total-sale{
         flex-direction: row;
-        gap: 1rem;
+        /* gap: 1rem; */
+    }
+    .total-sale .big-num{
+        margin: 0 1rem;
     }
     .sales ul{
         width: fit-content;
@@ -1272,7 +1298,10 @@ footer ul li a:hover{
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
-        gap: 2rem;
+        /* gap: 2rem; */
+    }
+    .services-gallery > *{
+        padding: 0 2rem;
     }
     .services-gallery:nth-of-type(2n + 1){
         flex-direction: row-reverse;
@@ -1292,9 +1321,6 @@ footer ul li a:hover{
     html{
         font-size: 20px;
     }
-    /* .hero{
-        min-height: 80vh;
-    } */
     .our-work{
         background-position: center 85%;
     }
@@ -1346,6 +1372,9 @@ footer ul li a:hover{
     }
     .flower-info-container .svg-icons{
         grid-template-columns: repeat(4, 1fr);
+    }
+    .products-display-ul li{
+        margin: 2rem 0.5rem;
     }
     /* trees */
     .deciduous-pic{
